--- a/src/element-variables.scss
+++ b/src/element-variables.scss
@@ -5,7 +5,9 @@ For example, to overwrite the theme color:
 */
 $--color-primary: teal;
 
+/* custom colours */
+
 /* icon font path, required */
-$--font-path: '~element-ui/lib/theme-chalk/fonts';
+$--font-path: "~element-ui/lib/theme-chalk/fonts";
 
 @import "~element-ui/packages/theme-chalk/src/index";
